--- a/store/static/css/style.css
+++ b/store/static/css/style.css
@@ -593,6 +593,16 @@ ol {
 	cursor: pointer;
 }
 
+.hero__categories__all:after {
+	position: absolute;
+	right: 18px;
+	top: 9px;
+	content: "";
+	font-family: "ElegantIcons";
+	font-size: 18px;
+	color: #ffffff;
+}
+
 .hero__categories__all i {
 	font-size: 16px;
 	color: #ffffff;
