--- a/store/templates/order-list.html
+++ b/store/templates/order-list.html
@@ -165,52 +165,52 @@
     </header>
     <!-- Header Section End -->
 
-    <!-- Checkout Section Begin -->
-    <section class="checkout spad">
+    <!-- Order list Section Begin -->
+   <section class="order-list">
         <div class="container">
+            <h1 class="my-4">Your Orders</h1>
+            <table class="table table-striped">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Order ID</th>
+                        <th>Address</th>
+                        <th>Phone</th>
+                        <th>Total Price</th>
+                        <th>Details</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for order in orders %}
+                        <tr>
+                            <td>{{ order.id }}</td>
+                            <td>{{ order.address }}</td>
+                            <td>{{ order.phone }}</td>
+                            <td>${{ order.total_price }}</td>
+                            <td><a href="" class="btn btn-primary view-details" data-order-id="{{ order.id }}">View Details</a></td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
 
-            <div class="checkout__form">
-                <h4>Billing Details</h4>
-                <form action="{% url 'store:checkout' %}" method="post">
-                    {% csrf_token %}
-                    <div class="row">
-                        <div class="col-lg-8 col-md-6">
-                            <div class="checkout__input">
-                                <p>Address<span>*</span></p>
-                                <input type="text" class="checkout__input__add" name="address">
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="checkout__input">
-                                        <p>Phone<span>*</span></p>
-                                        <input type="text" name="phone">
-                                    </div>
-                                </div>
-
-                            </div>
-
-                        </div>
-                        <div class="col-lg-4 col-md-6">
-                            <div class="checkout__order">
-                                <h4>Your Order</h4>
-                                <div class="checkout__order__products">Products <span>Total</span></div>
-                                {% for item in products_in_cart %}
-                                    <ul>
-                                        <li>{{ item.product.name }} x {{ item.quantity }}  <span>${{ item.sub_total }}</span></li>
-                                    </ul>
-                                {% endfor %}
-                                <div class="checkout__order__subtotal">Subtotal <span>${{ total }}</span></div>
-                                <div class="checkout__order__total">Total <span>${{ total }}</span></div>
-                                <button type="submit" class="site-btn">PLACE ORDER</button>
-                            </div>
-                        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="orderDetailModal" tabindex="-1" role="dialog" aria-labelledby="orderDetailModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="orderDetailModalLabel">Order Detail</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
-                </form>
+                    <div class="modal-body">
+                        <!-- Order details will be loaded here -->
+                    </div>
+                </div>
             </div>
         </div>
-    </section>
-    <!-- Checkout Section End -->
-
+   </section>
+    <!-- Order list Section End -->
 
 
     <!-- Footer Section Begin -->
@@ -244,6 +244,32 @@
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
 
+    <script>
+        $(document).ready(function() {
+            $('.view-details').on('click', function(event) {
+                event.preventDefault();
+
+                var orderId = $(this).data('order-id');
+
+                $.ajax({
+                    url: "{% url 'store:order_detail' %}",
+                    method: 'GET',
+                    data: {
+                        order_id: orderId
+                    },
+                    success: function(response) {
+
+                        $('#orderDetailModal .modal-body').html(response.html);
+                        $('#orderDetailModal').modal('show');
+
+                    },
+                    error: function(response) {
+                        console.log('Error:', response);
+                    }
+                });
+            });
+        });
+    </script>
 
 
 
