--- a/store/templates/checkout.html
+++ b/store/templates/checkout.html
@@ -44,7 +44,7 @@
         </div>
         <div class="humberger__menu__cart">
             <ul>
-                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i> <span>3</span></a></li>
+                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i> <span>{{ total_quantity }}</span></a></li>
             </ul>
             <div class="header__cart__price">item: <span>${{ total }}</span></div>
         </div>
@@ -56,18 +56,10 @@
         </div>
         <nav class="humberger__menu__nav mobile-menu">
             <ul>
-                <li class="active"><a href="store/index/">Home</a></li>
-                <li><a href="shop-grid.html">Shop</a></li>
-                <li><a href="#">Pages</a>
-                    <ul class="header__menu__dropdown">
-                        <li><a href="shop-details.html">Shop Details</a></li>
-                        <li><a href="shoping-cart.html">Shoping Cart</a></li>
-                        <li><a href="checkout.html">Check Out</a></li>
-                        <li><a href="blog-details.html">Blog Details</a></li>
-                    </ul>
-                </li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="{% url 'store:store' %}">Home</a></li>
+                <li><a href="{% url 'store:checkout_view' %}">Check Out</a></li>
+                <li><a href="{% url 'store:order_list' %}">Order</a></li>
+                <li><a href="#contact-session">Contact</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -133,18 +125,10 @@
                 <div class="col-lg-6">
                     <nav class="header__menu">
                         <ul>
-                            <li class="active"><a href="/store">Home</a></li>
-                            <li><a href="shop-grid.html">Shop</a></li>
-                            <li><a href="#">Pages</a>
-                                <ul class="header__menu__dropdown">
-                                    <li><a href="shop-details.html">Shop Details</a></li>
-                                    <li><a href="shoping-cart.html">Shoping Cart</a></li>
-                                    <li><a href="checkout.html">Check Out</a></li>
-                                    <li><a href="blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li class="active"><a href="{% url 'store:store' %}">Home</a></li>
+                            <li><a href="{% url 'store:checkout_view' %}">Check Out</a></li>
+                            <li><a href="{% url 'store:order_list' %}">Order</a></li>
+                            <li><a href="#contact-session">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
