--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -59,9 +59,9 @@
         </div>
         <div class="humberger__menu__cart">
             <ul>
-                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i> <span>3</span></a></li>
+                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i> <span>{{ total }}</span></a></li>
             </ul>
-            <div class="header__cart__price">item: <span>$150.00</span></div>
+            <div class="header__cart__price">item: <span>${{ total_quantity }}</span></div>
         </div>
         <div class="humberger__menu__widget">
 
@@ -71,18 +71,10 @@
         </div>
         <nav class="humberger__menu__nav mobile-menu">
             <ul>
-                <li class="active"><a href="./">Home</a></li>
-                <li><a href="shop-grid.html">Shop</a></li>
-                <li><a href="#">Pages</a>
-                    <ul class="header__menu__dropdown">
-                        <li><a href="shop-details.html">Shop Details</a></li>
-                        <li><a href="shoping-cart.html">Shoping Cart</a></li>
-                        <li><a href="checkout.html">Check Out</a></li>
-                        <li><a href="blog-details.html">Blog Details</a></li>
-                    </ul>
-                </li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="{% url 'store:store' %}">Home</a></li>
+                <li><a href="{% url 'store:checkout_view' %}">Check Out</a></li>
+                <li><a href="{% url 'store:order_list' %}">Order</a></li>
+                <li><a href="#contact-session">Contact</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -148,18 +140,10 @@
                 <div class="col-lg-6">
                     <nav class="header__menu">
                         <ul>
-                            <li class="active"><a href="./">Home</a></li>
-                            <li><a href="shop-grid.html">Shop</a></li>
-                            <li><a href="#">Pages</a>
-                                <ul class="header__menu__dropdown">
-                                    <li><a href="shop-details.html">Shop Details</a></li>
-                                    <li><a href="shoping-cart.html">Shoping Cart</a></li>
-                                    <li><a href="checkout.html">Check Out</a></li>
-                                    <li><a href="blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li class="active"><a href="{% url 'store:store' %}">Home</a></li>
+                            <li><a href="{% url 'store:checkout_view' %}">Check Out</a></li>
+                            <li><a href="{% url 'store:order_list' %}">Order</a></li>
+                            <li><a href="#contact-session">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -200,9 +184,9 @@
                 <div class="col-lg-9">
                     <div class="hero__search">
                         <div class="hero__search__form">
-                            <form action="#">
+                            <form action="{% url 'store:search' %}" method="GET">
 
-                                <input type="text" placeholder="What do you need?">
+                                <input type="text" name="q" placeholder="What do you need?">
                                 <button type="submit" class="site-btn">SEARCH</button>
                             </form>
                         </div>
@@ -291,7 +275,7 @@
 
 
     <!-- Footer Section Begin -->
-    <footer class="footer spad">
+    <footer class="footer spad" id="contact-session">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
